 * `update_index` management command now accepts a `--chunk_size` option to determine the number of items to load at once (Dave Bell)
 * Added hook `register_account_menu_item` to add new account preference items (Michael van Tellingen)
 * Added change email functionality from the account settings (Alejandro Garza, Alexs Mathilda)
 * Add request parameter to edit handlers (Rajeev J Sebastian)
 * Fix: Status button on 'edit page' now links to the correct URL when live and draft slug differ (LB (Ben Johnston))
 * Fix: Image title text in the gallery and in the chooser now wraps for long filenames (LB (Ben Johnston), Luiz Boaretto)
 * Fix: Move image editor action buttons to the bottom of the form on mobile (Julian Gallo)
 * Fix: StreamField icons are now correctly sorted into groups on the 'append' menu (Tim Heap)
 * Fix: Draftail now supports features specified via the `WAGTAILADMIN_RICH_TEXT_EDITORS` setting (Todd Dembrey)
 * Fix: Password reset form no longer indicates whether the email is recognised, as per standard Django behaviour (Bertrand Bordage)
 * Fix: `UserAttributeSimilarityValidator` is now correctly enforced on user creation / editing forms (Tim Heap)
 * Fix: Focal area removal not working in IE11 and MS Edge (Thibaud Colas)
 * Fix: Rewrite password change feedback message to be more user-friendly (Casper Timmers)
 * Fix: Correct dropdown arrow styling in Firefox, IE11 (Janneke Janssen, Alexs Mathilda)
 * Fix: Password reset no indicates specific validation errors on certain password restrictions (Lucas Moeskops)
 * Fix: Confirmation page on page deletion now respects custom `get_admin_display_title` methods (Kim Chee Leong)
 * Fix: Adding external link with selected text now includes text in link chooser (Tony Yates, Thibaud Colas, Alexs Mathilda)
 * Fix: Editing setting object with no site configured no longer crashes (Harm Zeinstra)
 * Fix: Creating a new object with inlines while mandatory fields are empty no longer crashes (Bertrand Bordage)